--- a/code/src/components/header/style.css
+++ b/code/src/components/header/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 header {
   background: #FFDFE7;
 }
@@ -12,4 +18,52 @@ header a {
 .header-grid {
   display: flex;
   justify-content: space-between;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #1f4afc;
+    margin: 5px 5px;
+    transition: 0.4s;
+}
+
+.hamburger {
+  width: 45px;
+  height: 45px;
+  background: #FFDFE7;
+  display: block;
+  padding-top: 5px;
+}
+
+.hamburger-checkbox {
+    display: none;
+}
+
+.menu {
+  box-sizing: border-box;
+  background: #FFDFE7;
+  width: 100%;
+  position: absolute;
+  left: -100%;
+  padding: 10px;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.hamburger-checkbox:checked + .menu {
+  left: 0;
+  opacity: 1;
+}
+
+@media (max-width: 767px) {
+  .header-grid {
+    display: none;
+  }
+}
+
+@media (min-width: 767px) {
+  .hamburger, .hamburger-checkbox, .menu {
+    display: none;
+  }
 }
